[gd_scene load_steps=4 format=3 uid="uid://dba5ghj4nccwu"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_4tkc3"]
[ext_resource type="Texture2D" uid="uid://cpfuv0kbpnuiv" path="res://city-skyline-view-from-bridge-metropolis-cityscape-with-road-skyscraper-buildings-urban-architecture-house-towers-cloudy-sky-modern-town-downtown-district-cartoon-vector-illustration/2111.w026.n002.1046B.p1.1046.jpg" id="2_kd7vc"]
[ext_resource type="FontFile" uid="uid://dx6em4aoebwdo" path="res://data-control/data-latin.ttf" id="3_lg4d3"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_4tkc3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(28.8039, 16.2009)
texture = ExtResource("2_kd7vc")
expand_mode = 2

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="StartMenu" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="StartMenu"]
offset_left = 799.0
offset_top = 379.0
offset_right = 1145.0
offset_bottom = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu/MarginContainer"]
layout_mode = 2

[node name="StartOption" type="HBoxContainer" parent="StartMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StartCursor" type="Label" parent="StartMenu/MarginContainer/VBoxContainer/StartOption"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_lg4d3")
theme_override_font_sizes/font_size = 50
text = ">"
horizontal_alignment = 1

[node name="StartText" type="Label" parent="StartMenu/MarginContainer/VBoxContainer/StartOption"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_lg4d3")
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="SettingsOption" type="HBoxContainer" parent="StartMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SettingsCursor" type="Label" parent="StartMenu/MarginContainer/VBoxContainer/SettingsOption"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_lg4d3")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="SettingsText" type="Label" parent="StartMenu/MarginContainer/VBoxContainer/SettingsOption"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_lg4d3")
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="QuitOption" type="HBoxContainer" parent="StartMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitCursor" type="Label" parent="StartMenu/MarginContainer/VBoxContainer/QuitOption"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_lg4d3")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="QuitText" type="Label" parent="StartMenu/MarginContainer/VBoxContainer/QuitOption"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_lg4d3")
theme_override_font_sizes/font_size = 50
text = "Quit"
